--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - clickhouse_data:/var/lib/clickhouse
       - clickhouse_logs:/var/log/clickhouse
+      - ./disable_logs.xml:/etc/clickhouse-server/config.d/disable_logs.xml
     ulimits:
       nofile:
         soft: 262144
